@@ -19,10 +19,6 @@ COPY web/target/app.jar /app/
 
 COPY web/target/lib/*.jar /app/lib/
 
-# Application Start Command
-COPY run-java.sh /
-RUN chmod +x /run-java.sh
-
 COPY 03-export-vault-secrets.sh /init-scripts/
-RUN chmod +x /init-scripts/*
+ENV JAVA_OPTS="-XX:MaxRAMPercentage=75.0  -Djava.security.egd=file:/dev/./urandom -Duser.timezone=Europe/Oslo --enable-preview "
 
